--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,30 +5,27 @@
   "pages_build_output_dir": "./dist",
   "compatibility_flags": [
     "nodejs_compat"
+  ],
+  // D1 Database for production
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "farm2world-production",
+      "database_id": "local-db-id"
+    }
+  ],
+  // R2 Storage for product images
+  "r2_buckets": [
+    {
+      "binding": "IMAGES",
+      "bucket_name": "farm2world-images"
+    }
+  ],
+  // KV for caching and sessions
+  "kv_namespaces": [
+    {
+      "binding": "CACHE",
+      "id": "local-kv-id"
+    }
   ]
-  // "vars": {
-  //   "MY_VAR": "my-variable"
-  // },
-  // "kv_namespaces": [
-  //   {
-  //     "binding": "MY_KV_NAMESPACE",
-  //     "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-  //   }
-  // ],
-  // "r2_buckets": [
-  //   {
-  //     "binding": "MY_BUCKET",
-  //     "bucket_name": "my-bucket"
-  //   }
-  // ],
-  // "d1_databases": [
-  //   {
-  //     "binding": "MY_DB",
-  //     "database_name": "my-database",
-  //     "database_id": ""
-  //   }
-  // ],
-  // "ai": {
-  //   "binding": "AI"
-  // }
 }
