--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,7 +11,7 @@
     {
       "binding": "DB",
       "database_name": "farm2world-production",
-      "database_id": "local-db-id"
+      "database_id": "1670037d-7a51-4b7d-8b49-d918fc83c0e4"
     }
   ],
   // R2 Storage for product images
